# Projeto_ETD

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
dashboard/: app.py
data/samples/: spotify_sample.csv
docs/: ai_usage_log.md  data_dictionary.md  data_model.md  load_validation.md  quality_report.md  source_inventory.md  technical_report.md
docs/diagrams/: erd.mmd  pipeline.mmd
orchestration/: prefect_flow.py
src/: __init__.py  run.py
src/common/: config.py  http.py  logging_setup.py
src/extract/: ingest_dataset.py  make_sample.py  musicbrainz.py  reccobeats.py
src/load/: build_warehouse.py  validate.py
src/quality/: report.py  rules.py
src/transform/: clean.py  match.py
tests/: test_smoke.py
